텍스트 이미지 색상 css

--- a/html5/20200902/20_text-shadow.html
+++ b/html5/20200902/20_text-shadow.html
@@ -16,6 +16,7 @@
             }
             .shadow3{
                 color: #fff;
+                          /* 가로 세로 번짐정도 색상 */
                 text-shadow: 7px -7px 5px #000;
             }
         </style>
