--- a/html5/20200902/27_merket.html
+++ b/html5/20200902/27_merket.html
@@ -5,38 +5,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>market</title>
     <style>
-        #container {
-            width: 650px;
-            margin: 0 auto;
-            padding: 5px;
+        #container {    /* 전체 콘텐츠를 감싸는 div */
+            width: 650px;   /* 너비 */
+            margin: 0 auto; /* 가로로 중앙에 배치 */
+            padding: 5px;   /* 테두리와 내용 사이의 패딩 여백 */
         }
-        #check {
-            width: 640px;
-            border:1px solid #ccc;
+        #check {    /* 텍스트 부분을 감싸는 div */
+            width: 640px;   /* 너비 - 그림 너비 값에 맞춤 */
+            border:1px solid #ccc;  /* 테두리 */
         }
         h1{
-            color: white;
-            font-size: 1em;
-            background: #222;
-            margin: 0;
-            padding: 10px;
+            color: white;   /* 글자색 */
+            font-size: 1em;     /* 글자 크기 */
+            background: #222;   /* 배경색 */
+            margin: 0;          /* 제목과 다른 요소 간의 마진 여백 */
+            padding: 10px;      /* 테두리와 제목 텍스트 사이의 패딩 여백 */
         }
         h2{
-            color:#ff0000;
-            font-size: 1.2em;
-            text-align: center;
+            color:#ff0000;  /* 글자색 */
+            font-size: 1.2em;   /* 글자 크기 */
+            text-align: center;  /* 가운데 정렬 */
         }
         p{
-            font-size: 1.5em;
-            line-height: 2em;
-            font-weight: bold;
-            text-align: center;
+            font-size: 1.5em;   /* 글자 크기 */
+            line-height: 2em;   /* 줄간격 */
+            font-weight: bold;  /* 굵게 */
+            text-align: center;  /* 가운데 정렬 */
         }
         .accent{
-            color: blue;
+            color: blue;    /* 글자색 */
         }
         .smalltext{
-            font-size: 0.7em;
+            font-size: 0.7em;   /* 글자 크기 */
         }
     </style>
 </head>
