--- a/html5/20200902/10_browser.html
+++ b/html5/20200902/10_browser.html
@@ -5,7 +5,7 @@
         <title>브라우저별 표현</title>
     <style>
         .box:hover{
-            -webkit-transform:rotate(15deg) ;
+            -webkit-transform:rotate(15deg) ;/*웹키트(사파리,크롬)*/
             transform:rotate(15deg);
             -o-transform: rotate(15deg);
         }
