--- a/html5/20200902/26_text-overflow.html
+++ b/html5/20200902/26_text-overflow.html
@@ -6,14 +6,14 @@
     <title>Document</title>
     <style>
         .content{
-            border: 1px solid #ccc;
-            width: 300px;
-            white-space: nowrap;
-            overflow:hidden;
-            text-overflow: ellipsis;
+            border: 1px solid #ccc; /* 테두리 */
+            width: 300px;   /* 단락의너비 */
+            white-space: nowrap;    /* 줄바꿈 안함 */
+            overflow:hidden;    /*넘치는부분 감춤 */
+            text-overflow: ellipsis;    /* 말 줄임표 */
         }
         .content:hover{
-            overflow:visible;
+            overflow:visible;   /* 넘치는 부분 보여줌 */
         }
     </style>
 </head>
